versions/v4.0.0/doxygen/html/globals_eval_d.md
---
version: v4.0.0
source_url: https://docs.zephyrproject.org/4.0.0/doxygen/html/globals_eval_d.html
original_path: doxygen/html/globals_eval_d.html
---

| Logo | Zephyr API Documentation 4.0.0  A Scalable Open Source RTOS |
| --- | --- |

Loading...

Searching...

No Matches

Here is a list of all enum values with links to the files they belong to:

### - d -

- DAI\_AMD\_BT : [dai.h](group__dai__interface.md#ggac95242d83a2c2b477fcb9eb3da420797a6c0c4b31c71c9e779a2a9325dc119fd0)
- DAI\_AMD\_DMIC : [dai.h](group__dai__interface.md#ggac95242d83a2c2b477fcb9eb3da420797a37f79dfe1804d4abeb89a9767bf37c75)
- DAI\_AMD\_SP : [dai.h](group__dai__interface.md#ggac95242d83a2c2b477fcb9eb3da420797ab675d7b5204a2cbc09f1f60a44f4ff3b)
- DAI\_CBC\_CFC : [dai.h](group__dai__interface.md#gga840116b8b56fd0263a17791e7156975da9f8f99d63e607d9603f54d535bd89f84)
- DAI\_CBC\_CFP : [dai.h](group__dai__interface.md#gga840116b8b56fd0263a17791e7156975daf4862a3af6fb46f6ac9ffc0cdbbcf0a1)
- DAI\_CBP\_CFC : [dai.h](group__dai__interface.md#gga840116b8b56fd0263a17791e7156975da4baee3a3ab87e540b5f4caf26e8d8c4b)
- DAI\_CBP\_CFP : [dai.h](group__dai__interface.md#gga840116b8b56fd0263a17791e7156975da347440e41adadd2b6a91076f53abe2e3)
- DAI\_DIR\_BOTH : [dai.h](group__dai__interface.md#ggafa7b22e4250c6479301fc657fea8a60fa58581d875a6a8c28adb0f6351a37f3e1)
- DAI\_DIR\_RX : [dai.h](group__dai__interface.md#ggafa7b22e4250c6479301fc657fea8a60fa48cc817cda4907b94a03e13e8b9aa69b)
- DAI\_DIR\_TX : [dai.h](group__dai__interface.md#ggafa7b22e4250c6479301fc657fea8a60fadfdf2212e2d86296dbccc60cfd60368c)
- DAI\_IMX\_ESAI : [dai.h](group__dai__interface.md#ggac95242d83a2c2b477fcb9eb3da420797a75bfaa3859321a283929ae033fcf22aa)
- DAI\_IMX\_SAI : [dai.h](group__dai__interface.md#ggac95242d83a2c2b477fcb9eb3da420797aa94ef995d95f9d0ad8b404e26b79faec)
- DAI\_INTEL\_ALH : [dai.h](group__dai__interface.md#ggac95242d83a2c2b477fcb9eb3da420797a19dd111b0d7f7772415bc60c1256d141)
- DAI\_INTEL\_ALH\_NHLT : [dai.h](group__dai__interface.md#ggac95242d83a2c2b477fcb9eb3da420797a2a12c2858722c553cb31f24aacd83976)
- DAI\_INTEL\_DMIC : [dai.h](group__dai__interface.md#ggac95242d83a2c2b477fcb9eb3da420797a366db52bd49557d047f091cdb96b5e36)
- DAI\_INTEL\_DMIC\_NHLT : [dai.h](group__dai__interface.md#ggac95242d83a2c2b477fcb9eb3da420797a3d759f9665a4db0c974913c4aa71e6f2)
- DAI\_INTEL\_HDA : [dai.h](group__dai__interface.md#ggac95242d83a2c2b477fcb9eb3da420797a1a591d4c0b7a70e175fc967b59929326)
- DAI\_INTEL\_HDA\_NHLT : [dai.h](group__dai__interface.md#ggac95242d83a2c2b477fcb9eb3da420797afd1f617fdd16363c1a10e9f45a67a99b)
- DAI\_INTEL\_SSP : [dai.h](group__dai__interface.md#ggac95242d83a2c2b477fcb9eb3da420797a9301e2ec67fa75aefc0e59df727adcc9)
- DAI\_INTEL\_SSP\_NHLT : [dai.h](group__dai__interface.md#ggac95242d83a2c2b477fcb9eb3da420797a8d75b1d72f5fcff348c15281001f9aaa)
- DAI\_INVERSION\_IB\_IF : [dai.h](group__dai__interface.md#ggaf66ca0bbc1f8ba2f2b81caf92bd09b60ab35554010caadb69a5414c7f07649ee1)
- DAI\_INVERSION\_IB\_NF : [dai.h](group__dai__interface.md#ggaf66ca0bbc1f8ba2f2b81caf92bd09b60ae0a56f8334363d4a1aa916ffe5d70e5c)
- DAI\_INVERSION\_NB\_IF : [dai.h](group__dai__interface.md#ggaf66ca0bbc1f8ba2f2b81caf92bd09b60ad6622f24986622cf16fdeada99356c43)
- DAI\_INVERSION\_NB\_NF : [dai.h](group__dai__interface.md#ggaf66ca0bbc1f8ba2f2b81caf92bd09b60a35606eb43c6d77204bff029bfab37698)
- DAI\_LEGACY\_I2S : [dai.h](group__dai__interface.md#ggac95242d83a2c2b477fcb9eb3da420797a2560d8f844796f647ed774748c44adfe)
- DAI\_MEDIATEK\_AFE : [dai.h](group__dai__interface.md#ggac95242d83a2c2b477fcb9eb3da420797ac5095e399162d248e638b87a61b59a00)
- DAI\_PROTO\_DSP\_A : [dai.h](group__dai__interface.md#gga3fa4c114ad6a3dd6a6015b6ab3d119a2a6ffdc334c0f64feeb95297293f747bc3)
- DAI\_PROTO\_DSP\_B : [dai.h](group__dai__interface.md#gga3fa4c114ad6a3dd6a6015b6ab3d119a2aea1fd67c47f7d8d7e3ca18b2f2e806a0)
- DAI\_PROTO\_I2S : [dai.h](group__dai__interface.md#gga3fa4c114ad6a3dd6a6015b6ab3d119a2adf515857c95ea685a32bf18c0ebb9af2)
- DAI\_PROTO\_LEFT\_J : [dai.h](group__dai__interface.md#gga3fa4c114ad6a3dd6a6015b6ab3d119a2a0d0f5db48e33cef8aa6c59a00792866b)
- DAI\_PROTO\_PDM : [dai.h](group__dai__interface.md#gga3fa4c114ad6a3dd6a6015b6ab3d119a2a3235bf6888b65c9c6e3a0d2f95fc0758)
- DAI\_PROTO\_RIGHT\_J : [dai.h](group__dai__interface.md#gga3fa4c114ad6a3dd6a6015b6ab3d119a2a9ed5273ee9ea0761ccf9cbc7f7295a3f)
- DAI\_STATE\_ERROR : [dai.h](group__dai__interface.md#gga18f708594ea85d6b893906336047c3a5a5030da046fda46120d9b54a686fb35ef)
- DAI\_STATE\_NOT\_READY : [dai.h](group__dai__interface.md#gga18f708594ea85d6b893906336047c3a5a8486be6ff6f6bf91ee4a8ad632377987)
- DAI\_STATE\_PAUSED : [dai.h](group__dai__interface.md#gga18f708594ea85d6b893906336047c3a5acb4e0c1f9df9eb0b7cf965b710a2ad13)
- DAI\_STATE\_PRE\_RUNNING : [dai.h](group__dai__interface.md#gga18f708594ea85d6b893906336047c3a5a234306cd9cc97674455f8a9321834953)
- DAI\_STATE\_READY : [dai.h](group__dai__interface.md#gga18f708594ea85d6b893906336047c3a5a095422b1a71b65e5a5902e0ca5cd3650)
- DAI\_STATE\_RUNNING : [dai.h](group__dai__interface.md#gga18f708594ea85d6b893906336047c3a5a8692bbb3fce619aec3dfe5ed9697f73f)
- DAI\_STATE\_STOPPING : [dai.h](group__dai__interface.md#gga18f708594ea85d6b893906336047c3a5aba10f89376d67abdc3dc704c6b283d2b)
- DAI\_TRIGGER\_COPY : [dai.h](group__dai__interface.md#ggaee6445967afb3ecf2c0470ca0c104a1aa6720f67f3bc6ab62eacf986316df0a9f)
- DAI\_TRIGGER\_DRAIN : [dai.h](group__dai__interface.md#ggaee6445967afb3ecf2c0470ca0c104a1aa1c17da0f6a54c2c25f2dd2349b5c0e02)
- DAI\_TRIGGER\_DROP : [dai.h](group__dai__interface.md#ggaee6445967afb3ecf2c0470ca0c104a1aa1f004f7d4dcb67d2c3a89298400b2234)
- DAI\_TRIGGER\_PAUSE : [dai.h](group__dai__interface.md#ggaee6445967afb3ecf2c0470ca0c104a1aadb17f3981cf0e248187c4006f527a3a5)
- DAI\_TRIGGER\_POST\_STOP : [dai.h](group__dai__interface.md#ggaee6445967afb3ecf2c0470ca0c104a1aad2fcfa3c229bfc0a82ec7841ab9f88c3)
- DAI\_TRIGGER\_PRE\_START : [dai.h](group__dai__interface.md#ggaee6445967afb3ecf2c0470ca0c104a1aac7647bb0111f043abcdaa4b3e703b2ec)
- DAI\_TRIGGER\_PREPARE : [dai.h](group__dai__interface.md#ggaee6445967afb3ecf2c0470ca0c104a1aad9d4e12f62ee2e106abaeb3bb341ee70)
- DAI\_TRIGGER\_RESET : [dai.h](group__dai__interface.md#ggaee6445967afb3ecf2c0470ca0c104a1aafa607dff411961ae22e44f1a972c4711)
- DAI\_TRIGGER\_START : [dai.h](group__dai__interface.md#ggaee6445967afb3ecf2c0470ca0c104a1aabcbb4f151183d54d51dde07d09b3f222)
- DAI\_TRIGGER\_STOP : [dai.h](group__dai__interface.md#ggaee6445967afb3ecf2c0470ca0c104a1aa23dd7f534a18f92cbf12ad957674ba35)
- DATA\_ROLE\_IS\_DFP : [usbc.h](group____usbc__device__api.md#gga66f934a5c5cd88b574c71d1f18fbda23a791604f4f0b2a2c3ccea4e98d1659a61)
- DATA\_ROLE\_IS\_UFP : [usbc.h](group____usbc__device__api.md#gga66f934a5c5cd88b574c71d1f18fbda23a4020203569dcb95ab1b3d2946efced19)
- DEFAULT\_BUS\_SPEED : [sd\_spec.h](sd__spec_8h.md#a6b42b86d8f2ba4f29787c7c6f3d97f36a90413fe7dfd8568eeac79709ece7a549)
- DEVICE\_TO\_HOST : [pcie\_ep.h](pcie__ep_8h.md#acd2605f2fb5676ded5f125712681d458a4c419a2c450c4d954c3768631870480a)
- dfuDNBUSY : [usb\_dfu.h](usb__dfu_8h.md#a3f025bde53c777c5e0493ef54bbeb143afd398c862995dfe599a9f182fa1e902e)
- dfuDNLOAD\_IDLE : [usb\_dfu.h](usb__dfu_8h.md#a3f025bde53c777c5e0493ef54bbeb143a68f32e308ff090838040f69ddcab8fff)
- dfuDNLOAD\_SYNC : [usb\_dfu.h](usb__dfu_8h.md#a3f025bde53c777c5e0493ef54bbeb143ad5eb9bbb1f4eb27a0ac7e60c0bf5341f)
- dfuERROR : [usb\_dfu.h](usb__dfu_8h.md#a3f025bde53c777c5e0493ef54bbeb143a15ff004b2336c3e5b88e3edd276b32fd)
- dfuIDLE : [usb\_dfu.h](usb__dfu_8h.md#a3f025bde53c777c5e0493ef54bbeb143a64a13d4b1b2cc0b0a40069d8c28fe74c)
- dfuMANIFEST : [usb\_dfu.h](usb__dfu_8h.md#a3f025bde53c777c5e0493ef54bbeb143aaffa9156a82ef21608e730325d8bb2c6)
- dfuMANIFEST\_SYNC : [usb\_dfu.h](usb__dfu_8h.md#a3f025bde53c777c5e0493ef54bbeb143a002e3cc408cf56d51c6cd2b0d90f1b7c)
- dfuMANIFEST\_WAIT\_RST : [usb\_dfu.h](usb__dfu_8h.md#a3f025bde53c777c5e0493ef54bbeb143aa6e5b30fd65a5485046759f438be29d8)
- dfuUPLOAD\_IDLE : [usb\_dfu.h](usb__dfu_8h.md#a3f025bde53c777c5e0493ef54bbeb143a541f6e1c465d547c1265ba6bde6c59c2)
- DISPLAY\_ORIENTATION\_NORMAL : [display.h](group__display__interface.md#ggac59b091a3ed39431ab97a5f19fdc4855adb3975e2caf6c28374e20a5e0ac26ed2)
- DISPLAY\_ORIENTATION\_ROTATED\_180 : [display.h](group__display__interface.md#ggac59b091a3ed39431ab97a5f19fdc4855a7f71ba80f09d5b17f7cdfa7456ed0e29)
- DISPLAY\_ORIENTATION\_ROTATED\_270 : [display.h](group__display__interface.md#ggac59b091a3ed39431ab97a5f19fdc4855af81128a85915f41c22bc0581f51455b4)
- DISPLAY\_ORIENTATION\_ROTATED\_90 : [display.h](group__display__interface.md#ggac59b091a3ed39431ab97a5f19fdc4855a632483591b572c0945df3f65cb4e52bc)
- DMA\_ADDR\_ADJ\_DECREMENT : [dma.h](group__dma__interface.md#ggafe0877ef4bd7790a4bcd46052088231caacc38507d8ef3eb8021ae85d9b61b717)
- DMA\_ADDR\_ADJ\_INCREMENT : [dma.h](group__dma__interface.md#ggafe0877ef4bd7790a4bcd46052088231cac1fe38db8443f6d8e406c66ba6bdd15e)
- DMA\_ADDR\_ADJ\_NO\_CHANGE : [dma.h](group__dma__interface.md#ggafe0877ef4bd7790a4bcd46052088231cafeb870c1a6f9db8238a97f3ac9c6da4f)
- DMA\_ATTR\_BUFFER\_ADDRESS\_ALIGNMENT : [dma.h](group__dma__interface.md#gga08c366c8d47672eeeb37b258af20101ba486ede0649882311fd344a52983d5f3f)
- DMA\_ATTR\_BUFFER\_SIZE\_ALIGNMENT : [dma.h](group__dma__interface.md#gga08c366c8d47672eeeb37b258af20101baa6b28cfc17b80884dddc18fcaa2b6873)
- DMA\_ATTR\_COPY\_ALIGNMENT : [dma.h](group__dma__interface.md#gga08c366c8d47672eeeb37b258af20101baa07cc26d400fa919df133552eb2e317b)
- DMA\_ATTR\_MAX\_BLOCK\_COUNT : [dma.h](group__dma__interface.md#gga08c366c8d47672eeeb37b258af20101bafcaffeb0a1c7be27d258d73968196d18)
- DMA\_CHANNEL\_DIRECTION\_COMMON\_COUNT : [dma.h](group__dma__interface.md#ggae442d8ba73be7e53b68165647b0ea402ae7c3dacfd3496576c41f9c663537419a)
- DMA\_CHANNEL\_DIRECTION\_MAX : [dma.h](group__dma__interface.md#ggae442d8ba73be7e53b68165647b0ea402a9114b4138c9dfb506b9428a229c55a02)
- DMA\_CHANNEL\_DIRECTION\_PRIV\_START : [dma.h](group__dma__interface.md#ggae442d8ba73be7e53b68165647b0ea402a273f9cdcc2af613375cb3e235bfda037)
- DMA\_CHANNEL\_NORMAL : [dma.h](group__dma__interface.md#ggade594552920aabbfd2106059a338498ba54326b41a55d7a64c808cea83520b94f)
- DMA\_CHANNEL\_PERIODIC : [dma.h](group__dma__interface.md#ggade594552920aabbfd2106059a338498bacffe4591bb7577cd8596d4dc1b51838c)
- DMA\_SMARTBOND\_TRIG\_MUX\_GPADC : [dma\_smartbond.h](drivers_2dma_2dma__smartbond_8h.md#a82ef8a416596bd147cea250945dc6136a2a60d9a63af958a3cd66818e83a97286)
- DMA\_SMARTBOND\_TRIG\_MUX\_I2C : [dma\_smartbond.h](drivers_2dma_2dma__smartbond_8h.md#a82ef8a416596bd147cea250945dc6136a4123d0b00586145b5a490ef77a8f49eb)
- DMA\_SMARTBOND\_TRIG\_MUX\_I2C2 : [dma\_smartbond.h](drivers_2dma_2dma__smartbond_8h.md#a82ef8a416596bd147cea250945dc6136a08c27af5011f2efa6617d46009cd52f9)
- DMA\_SMARTBOND\_TRIG\_MUX\_NONE : [dma\_smartbond.h](drivers_2dma_2dma__smartbond_8h.md#a82ef8a416596bd147cea250945dc6136a72a2552fde29d6d2c6dff01afb9363c4)
- DMA\_SMARTBOND\_TRIG\_MUX\_PCM : [dma\_smartbond.h](drivers_2dma_2dma__smartbond_8h.md#a82ef8a416596bd147cea250945dc6136ab8c5550e628eec592369100aa4b28fd1)
- DMA\_SMARTBOND\_TRIG\_MUX\_SDADC : [dma\_smartbond.h](drivers_2dma_2dma__smartbond_8h.md#a82ef8a416596bd147cea250945dc6136a4a01f6631dc9050c65121bb5fd5b7b66)
- DMA\_SMARTBOND\_TRIG\_MUX\_SPI : [dma\_smartbond.h](drivers_2dma_2dma__smartbond_8h.md#a82ef8a416596bd147cea250945dc6136afaf3c2577a95e306db93baa987d68f8f)
- DMA\_SMARTBOND\_TRIG\_MUX\_SPI2 : [dma\_smartbond.h](drivers_2dma_2dma__smartbond_8h.md#a82ef8a416596bd147cea250945dc6136ac36c296af5ee6ca8625fe9d9988bcaf6)
- DMA\_SMARTBOND\_TRIG\_MUX\_SRC : [dma\_smartbond.h](drivers_2dma_2dma__smartbond_8h.md#a82ef8a416596bd147cea250945dc6136a082f64dec61621f93ae6066917d3751d)
- DMA\_SMARTBOND\_TRIG\_MUX\_UART : [dma\_smartbond.h](drivers_2dma_2dma__smartbond_8h.md#a82ef8a416596bd147cea250945dc6136af8a02b7a018fdc550d9f9aec6486815e)
- DMA\_SMARTBOND\_TRIG\_MUX\_UART2 : [dma\_smartbond.h](drivers_2dma_2dma__smartbond_8h.md#a82ef8a416596bd147cea250945dc6136a57a6a0f375a2f347562f0f131bbb4aef)
- DMA\_SMARTBOND\_TRIG\_MUX\_UART3 : [dma\_smartbond.h](drivers_2dma_2dma__smartbond_8h.md#a82ef8a416596bd147cea250945dc6136ae0a75a1957c1147ead700bb0132526eb)
- DMA\_SMARTBOND\_TRIG\_MUX\_USB : [dma\_smartbond.h](drivers_2dma_2dma__smartbond_8h.md#a82ef8a416596bd147cea250945dc6136a7de5184361a3d494c144d968c696b42e)
- DMIC\_STATE\_ACTIVE : [dmic.h](group__audio__dmic__interface.md#ggac99a4f579b6aa45bb6cce1f797247a23ae3f1d62885d522598ced88089f4ae8b4)
- DMIC\_STATE\_CONFIGURED : [dmic.h](group__audio__dmic__interface.md#ggac99a4f579b6aa45bb6cce1f797247a23a70d47513a9c0ff07cdf4d814ac78a826)
- DMIC\_STATE\_ERROR : [dmic.h](group__audio__dmic__interface.md#ggac99a4f579b6aa45bb6cce1f797247a23a8b6622df75d7c4205c11db2f26619eba)
- DMIC\_STATE\_INITIALIZED : [dmic.h](group__audio__dmic__interface.md#ggac99a4f579b6aa45bb6cce1f797247a23a733caa2b8a49d4b2f78698b810cbdbc1)
- DMIC\_STATE\_PAUSED : [dmic.h](group__audio__dmic__interface.md#ggac99a4f579b6aa45bb6cce1f797247a23a14306a41b9a832343c8b6e1fcb971c81)
- DMIC\_STATE\_UNINIT : [dmic.h](group__audio__dmic__interface.md#ggac99a4f579b6aa45bb6cce1f797247a23a45b37076808ed30994ed02ca0581b1be)
- DMIC\_TRIGGER\_PAUSE : [dmic.h](group__audio__dmic__interface.md#gga24aae0a7871b3bd31b130061feeefc14a6077bf984fd654947ff36e1bc66e98e5)
- DMIC\_TRIGGER\_RELEASE : [dmic.h](group__audio__dmic__interface.md#gga24aae0a7871b3bd31b130061feeefc14a69b5be548e54589e03645baf2ab80804)
- DMIC\_TRIGGER\_RESET : [dmic.h](group__audio__dmic__interface.md#gga24aae0a7871b3bd31b130061feeefc14aa6dca65941d65845383209c081173a79)
- DMIC\_TRIGGER\_START : [dmic.h](group__audio__dmic__interface.md#gga24aae0a7871b3bd31b130061feeefc14a031d6c7646642d4858a22c853d6d6eaa)
- DMIC\_TRIGGER\_STOP : [dmic.h](group__audio__dmic__interface.md#gga24aae0a7871b3bd31b130061feeefc14ab3f5cdba100516563098e659adee2e23)
- DNS\_EAI\_ADDRFAMILY : [dns\_resolve.h](group__dns__resolve.md#gga5baf1fea0482fb3a940b4f5350a3c58ea4092e3cb6e36bba4ea8fce4bc0352e5d)
- DNS\_EAI\_AGAIN : [dns\_resolve.h](group__dns__resolve.md#gga5baf1fea0482fb3a940b4f5350a3c58ea517a9b3ce92e064eb50f40ec72e341b9)
- DNS\_EAI\_ALLDONE : [dns\_resolve.h](group__dns__resolve.md#gga5baf1fea0482fb3a940b4f5350a3c58eac9a19751ef16468e8f46b9f59bc8d836)
- DNS\_EAI\_CANCELED : [dns\_resolve.h](group__dns__resolve.md#gga5baf1fea0482fb3a940b4f5350a3c58ea935a23488ff9e1f51f91ac3598a4cbc3)
- DNS\_EAI\_FAIL : [dns\_resolve.h](group__dns__resolve.md#gga5baf1fea0482fb3a940b4f5350a3c58ea512c526ee3142b8f00330e5009672455)
- DNS\_EAI\_IDN\_ENCODE : [dns\_resolve.h](group__dns__resolve.md#gga5baf1fea0482fb3a940b4f5350a3c58ea3f7d3cecbaf3b7ca061f163f7769cda4)
- DNS\_EAI\_INPROGRESS : [dns\_resolve.h](group__dns__resolve.md#gga5baf1fea0482fb3a940b4f5350a3c58ea4281a05dd374dc24758896fb8d4000f3)
- DNS\_EAI\_MEMORY : [dns\_resolve.h](group__dns__resolve.md#gga5baf1fea0482fb3a940b4f5350a3c58ea23a80de9adbce595e2bf1556d92c4673)
- DNS\_EAI\_NODATA : [dns\_resolve.h](group__dns__resolve.md#gga5baf1fea0482fb3a940b4f5350a3c58ea5c3e54fabe22199b2d27018ef8851fa2)
- DNS\_EAI\_NONAME : [dns\_resolve.h](group__dns__resolve.md#gga5baf1fea0482fb3a940b4f5350a3c58ea7280a03e2eaec0be6ee1369c25a13d7f)
- DNS\_EAI\_NOTCANCELED : [dns\_resolve.h](group__dns__resolve.md#gga5baf1fea0482fb3a940b4f5350a3c58ea2839d8cf68a4d668ccfdb38898a2414f)
- DNS\_EAI\_OVERFLOW : [dns\_resolve.h](group__dns__resolve.md#gga5baf1fea0482fb3a940b4f5350a3c58ea8c1f83b2e79dbec7a3f42cc37301271f)
- DNS\_QUERY\_TYPE\_A : [dns\_resolve.h](group__dns__resolve.md#gga7169c5a920fb1b0d77910a6ab922e3f0a96b4b4e07f1560cd046cac010ac32134)
- DNS\_QUERY\_TYPE\_AAAA : [dns\_resolve.h](group__dns__resolve.md#gga7169c5a920fb1b0d77910a6ab922e3f0aad661f3510af499212143370a81b9049)
- DRV2605\_HAPTICS\_SOURCE\_ANALOG : [drv2605.h](drv2605_8h.md#ae98fe02355253b7d8f4583a36919639ca84df3211177d36ab92cd44fde7bb1b1a)
- DRV2605\_HAPTICS\_SOURCE\_AUDIO : [drv2605.h](drv2605_8h.md#ae98fe02355253b7d8f4583a36919639ca3903c6a4404288eaa77a8d365cfc344a)
- DRV2605\_HAPTICS\_SOURCE\_PWM : [drv2605.h](drv2605_8h.md#ae98fe02355253b7d8f4583a36919639caa30841998fe2092cdf959153291e0d08)
- DRV2605\_HAPTICS\_SOURCE\_ROM : [drv2605.h](drv2605_8h.md#ae98fe02355253b7d8f4583a36919639ca38623b24d3ca65f42e8ab09ad2764d5d)
- DRV2605\_HAPTICS\_SOURCE\_RTP : [drv2605.h](drv2605_8h.md#ae98fe02355253b7d8f4583a36919639ca51dd1dcc3db5a89efd31a9f72c7db43a)
- DRV2605\_LIBRARY\_EMPTY : [drv2605.h](drv2605_8h.md#ad8242facf545ff18b81f0703bcf6bb16aad90f2d8bdee21c390c4344bd808d345)
- DRV2605\_LIBRARY\_LRA : [drv2605.h](drv2605_8h.md#ad8242facf545ff18b81f0703bcf6bb16a3f114d1e1095105c5db786e9aa2dff60)
- DRV2605\_LIBRARY\_TS2200\_A : [drv2605.h](drv2605_8h.md#ad8242facf545ff18b81f0703bcf6bb16a3babadb779b635c80d88fbd5eeb1dd7a)
- DRV2605\_LIBRARY\_TS2200\_B : [drv2605.h](drv2605_8h.md#ad8242facf545ff18b81f0703bcf6bb16a368575d421fedc421e0540393cc27845)
- DRV2605\_LIBRARY\_TS2200\_C : [drv2605.h](drv2605_8h.md#ad8242facf545ff18b81f0703bcf6bb16a53c2477779bae577572c1d38ccffbcf1)
- DRV2605\_LIBRARY\_TS2200\_D : [drv2605.h](drv2605_8h.md#ad8242facf545ff18b81f0703bcf6bb16aa2df9656713c03702620e945de72de56)
- DRV2605\_LIBRARY\_TS2200\_E : [drv2605.h](drv2605_8h.md#ad8242facf545ff18b81f0703bcf6bb16aa3656aebd793e203c0b986abb7846f64)
- DRV2605\_MODE\_AUDIO\_TO\_VIBE : [drv2605.h](drv2605_8h.md#a01ec80a028b1101fbdf3e624800ca02aafca2555c87c8b63e417e5353f24b2c24)
- DRV2605\_MODE\_AUTO\_CAL : [drv2605.h](drv2605_8h.md#a01ec80a028b1101fbdf3e624800ca02aadcfb6eb9e12238478bf23fb76423f248)
- DRV2605\_MODE\_DIAGNOSTICS : [drv2605.h](drv2605_8h.md#a01ec80a028b1101fbdf3e624800ca02aa3c980005d0daee97567fa5e35d8a2836)
- DRV2605\_MODE\_EXTERNAL\_EDGE\_TRIGGER : [drv2605.h](drv2605_8h.md#a01ec80a028b1101fbdf3e624800ca02aaeb3d84bd67bd5ffa36cd11628d051fb9)
- DRV2605\_MODE\_EXTERNAL\_LEVEL\_TRIGGER : [drv2605.h](drv2605_8h.md#a01ec80a028b1101fbdf3e624800ca02aa8303fe0cf8044350d6be89eb0865b254)
- DRV2605\_MODE\_INTERNAL\_TRIGGER : [drv2605.h](drv2605_8h.md#a01ec80a028b1101fbdf3e624800ca02aaab537e7781201365d04f1b61ca1293b5)
- DRV2605\_MODE\_PWM\_ANALOG\_INPUT : [drv2605.h](drv2605_8h.md#a01ec80a028b1101fbdf3e624800ca02aa62b722c2507a7f9160f775631894cc2f)
- DRV2605\_MODE\_RTP : [drv2605.h](drv2605_8h.md#a01ec80a028b1101fbdf3e624800ca02aaf9d11ca9fce86e99cad74b77a2089d9a)
- DT\_USB\_MAXIMUM\_SPEED\_FULL\_SPEED : [usb.h](usb_8h.md#ac343e285b07073790285bba59e3500bfac7256cb721aa6d6ae982314e13c5667e)
- DT\_USB\_MAXIMUM\_SPEED\_HIGH\_SPEED : [usb.h](usb_8h.md#ac343e285b07073790285bba59e3500bfab1b5b72e016a50503f9ff2661965340b)
- DT\_USB\_MAXIMUM\_SPEED\_LOW\_SPEED : [usb.h](usb_8h.md#ac343e285b07073790285bba59e3500bfaf5e69c61df9ae69910b5509564f91828)
- DT\_USB\_MAXIMUM\_SPEED\_SUPER\_SPEED : [usb.h](usb_8h.md#ac343e285b07073790285bba59e3500bfa98ef9ffd2b88d0780f79d258945e4f0d)

- Generated on  for Zephyr API Documentation by [![doxygen](https://docs.zephyrproject.org/4.0.0/doxygen/html/doxygen.svg)](https://www.doxygen.org/index.html) 1.16.1
